--- a/UX Offical/Payment webpage 4.html
+++ b/UX Offical/Payment webpage 4.html
@@ -72,7 +72,7 @@
 
     <div class="important_infomation">
         <h1 class="information_header">Receipt</h1>
-        <p class="information_testing">Guest name: Aiman Reza</p>
+        <p class="information_testing" id="information_name">Guest name: Aiman Reza</p>
         <p class="information_testing">Phone Number: 80281578</p>
         <p class="information_testing">Receipt has been Emailed to you at Email@aimanhakim.com</p>
 
@@ -85,8 +85,8 @@
 
 
 
-        <p class="information_checkin_date">Check-In date: 1st August 2023</p>
-        <p class="information_checkout_date">Check-Out date: 5th August 2023</p>
+        <p class="information_checkin_date">Check-In Date: <p class="information_checkin_date" id="information_checkin_date">Check-In date: 1st August 2023</p></p>
+        <p class="information_checkout_date">Check-Out Date: <p class="information_checkout_date" id="information_checkout_date">Check-Out date: 5th August 2023</p></p>
         <p class="information_days_selected_room">Room Selected: Ocean Retreat Room</p>
 
         <a href="Homepage.html" class="return_to_homepage_button"><p class="return_to_homepage_text">Return to Home Page</p></a>
@@ -94,7 +94,7 @@
     </div>
 
 
-    
+    <script src="JS/payment_pages.js"></script>
 
 
 
