--- a/UX Offical/Payment webpage 2 (Room selection).html
+++ b/UX Offical/Payment webpage 2 (Room selection).html
@@ -128,7 +128,7 @@
                 <p class="garden_oasis_room_text_to_book">With a Queen Sized bed + Single bed</p>
                 <p class="garden_oasis_room_text_to_book">Up to 3 Guests</p>
                 <p class="garden_oasis_room_text_to_book">View of the Sentosa Beach</p>
-                <a href="Payment webpage 3.html" class="Premium_Oasis_Suite_button"><p class="Premium_Oasis_Suite_text_in_button">Select Room</p></a>
+                <a href="Payment webpage 3.html" class="Premium_Oasis_Suite_button" onclick="premium_oasis_suite()"><p class="Premium_Oasis_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
             <hr class="line_break_seperating_rooms">
@@ -150,7 +150,7 @@
                 <p class="garden_oasis_room_text_to_book">With 2 Queen Sized beds</p>
                 <p class="garden_oasis_room_text_to_book">Up to 4 Guests</p>
                 <p class="garden_oasis_room_text_to_book">View of the Oasis Garden</p>
-                <a href="Payment webpage 3.html" class="Sentosa_Suite_button"><p class="Sentosa_Suite_text_in_button">Select Room</p></a>
+                <a href="Payment webpage 3.html" class="Sentosa_Suite_button" onclick="sentosa_suite()"><p class="Sentosa_Suite_text_in_button">Select Room</p></a>
             </div>
             </div>
         </div>
@@ -161,8 +161,8 @@
 
     <div class="important_infomation">
         <h1 class="information_header">Infomation</h1>
-        <p class="information_checkin_date">Check-In Date: <p class="information_checkin_date" id="information_checkin_date">Check-In date: 1st August 2023</p></p>
-        <p class="information_checkout_date">Check-Out Date: <p class="information_checkout_date" id="information_checkout_date">Check-Out date: 5th August 2023</p></p>
+        <p class="information_checkin_date" id="information_checkin_date"></p>
+        <p class="information_checkout_date" id="information_checkout_date"></p>
     </div>
 
     <script src="JS/payment_pages.js"></script>
