--- a/UX Offical/Payment webpage 4.html
+++ b/UX Offical/Payment webpage 4.html
@@ -96,6 +96,12 @@
 
     <script src="JS/payment_pages.js"></script>
 
+    <!--<script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("information_name").innerHTML = "gang";
+    });
+    </script>__>
+
 
 
 
